tests/ui/impl-trait/in-trait/wf-bounds.next.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/wf-bounds.rs:13:22
   |
LL |     fn nya() -> impl Wf<Vec<[u8]>>;
   |                      ^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/wf-bounds.rs:16:23
   |
LL |     fn nya2() -> impl Wf<[u8]>;
   |                       ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `Wf`
  --> $DIR/wf-bounds.rs:8:10
   |
LL | trait Wf<T> {
   |          ^ required by this bound in `Wf`
help: consider relaxing the implicit `Sized` restriction
   |
LL | trait Wf<T: ?Sized> {
   |           ++++++++

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/wf-bounds.rs:19:44
   |
LL |     fn nya3() -> impl Wf<(), Output = impl Wf<Vec<[u8]>>>;
   |                                            ^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
